// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component IncidentList: Must match snapshot -- with some incidents: 1`] = `
<div
  className="incidentList"
>
  <div
    className="total"
  >
    total: 2
  </div>
  <div
    className="incidentCard"
  >
    IncidentCard
  </div>
  <div
    className="incidentCard"
  >
    IncidentCard
  </div>
  Pagination
</div>
`;

exports[`Component IncidentList: Must match snapshot -- without incidents: 1`] = `
<div
  className="incidentList"
>
  <p>
    No results
  </p>
</div>
`;
